src/stylesheets/components/_print.scss
//
// Print
// --------------------------------------------------

@page {
  margin: 1cm; // Set default margin
}

* {
  box-sizing: border-box;
}

html,
body,
main,
.container {
  height: 100%;
}

html {
  font-family: system-ui;
  font-size: 7pt;
  line-height: 7pt * 1.5; // Needs unit for some reason to be correct
  letter-spacing: 0.015em;
}

body {
  margin: 0;
  background-color: #fff;
}

.container {
  display: flex;
  page-break-after: always;
  outline: 3px solid blue;
  outline-offset: -3px;
  overflow: hidden;

  @media (orientation: portrait) {
    flex-direction: column;
  }

  &.overflow {
    height: auto;
    overflow: visible;

    @media (orientation: landscape) {
      flex-wrap: wrap;
    }
  }
}

.photo-container {
  flex: 1 1 auto;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  outline: 1px solid #000; // Debug only
  outline-offset: -1px; // …

  .metadata & {
    @media (orientation: portrait) {
      flex: 0 1 100vw;
      min-height: 50vh;
    }

    @media (orientation: landscape) {
      flex: 0 0 100vh;
      height: 100vh;
    }
  }
}

img {
  display: block;
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}

.metadata-container {
  flex: 1 0 auto;
  display: flex;

  @media (orientation: landscape) {
    flex: 1 1 auto;
    flex-direction: column;
    padding-left: 1cm;
  }

  .overflow & {
    @media (orientation: portrait) {
      min-height: calc(100vh - 100vw);
    }

    @media (orientation: landscape) {
      flex: 0 0 calc(100vw - 100vh);
    }
  }
}

.col {
  @media (orientation: portrait) {
    flex: 0 0  50%;

    &:first-child {
      padding-right: 5mm;
    }

    &:last-child {
      padding-left: 5mm;
    }
  }
}

.metadata-heading {
  display: flex;
  align-items: flex-end;
  font-size: inherit;
  font-weight: 400;
  margin: 0;
  height: 1cm;
  position: relative;

  // Hairline hack
  &::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    border-bottom: 1pt solid #000;
    transform: scaleY(0.5);
    transform-origin: bottom;
  }
}

.metadata-fields {
  list-style-type: none;
  padding: 0;
}

.metadata-field {
  display: flex;
}

label {
  flex: 0 0 33%;
  text-align: right;
  padding-right: 1.25mm;
  font-weight: 300;
}

.value {
  flex: 0 0 67%;
  padding-left: 1.25mm;
  word-break: break-word;
}

.note-container {
  .overflow & {
    font-size: 12px;
    line-height: 12px * 2;
  }
}

